Row and column footer

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <nav>
+    <footer class="row">
+        <nav class="col-md-6">
             <ul class="breadcrumb" style="background-color:white;">
                 <li class="breadcrumb-item"><a href="#">Contact Us</a></li>
                 <li class="breadcrumb-item"><a href="#">Frequently Asked Questions</a></li>
                 <li class="breadcrumb-item"><a href="#">Map</a></li>
               
             </ul>
-            <h6 class="breadcrumb-item">CopyRight. ()</h5>
+            <h6 class="breadcrumb-item col-md-6">CopyRight. ()</h6>
         </nav>
 
 
