--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </section>
 
     <!-- Footer -->
-    <footer class="row">
-        <nav class="col-md-6">
-            <ul class="breadcrumb" style="background-color:white;">
+    <footer >
+        <nav class="row">
+            <ul class="breadcrumb col-md-6" style="background-color:white;">
                 <li class="breadcrumb-item"><a href="#">Contact Us</a></li>
                 <li class="breadcrumb-item"><a href="#">Frequently Asked Questions</a></li>
                 <li class="breadcrumb-item"><a href="#">Map</a></li>
