--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="nav-wrapper green darken-1">
 
             <a href="#" class="brand-logo">
-                <img src="logoElim.png" alt="logoELim" width="65" height="65" />
+               <div><img src="logoElim.png" alt="logoELim" width="65" height="65" /></div> 
 
             </a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -39,8 +39,8 @@
         <div class="row">
             <div class="col s12 m6">
                 <div class="card">
-                    <div class="card-image">
-                        <img src="logoElim.png" alt="Logo ELim" width="5%" height="5%">
+                    <div class="card-image logo">
+                        <img src="logoElim.png" alt="Logo ELim" style="width: 100%;">
                     </div>
                     <div class="card-content">
                         <p>Lorem ipsum dolor sit amet, sed ad debet docendi, vis at autem forensibus. Quo id elit
@@ -54,7 +54,7 @@
             <div class="col s12 m6">
                 <div class="card">
                     <div class="card-image">
-                        <img src="SDmap.jpg" alt="Sd Map" width="5%" height="5%">
+                        <img src="SDmap.jpg" alt="Sd Map"  style="width: 100%;">
                         <span class="card-title">Elim Ministries</span>
                     </div>
                     <div class="card-content">
