--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="nav-wrapper green darken-1">
 
             <a href="#" class="brand-logo">
-               <div><img src="logoElim.png" alt="logoELim" width="65" height="65" /></div> 
+               <img src="logoElim.png" alt="logoELim" style="width: 5%;" />
 
             </a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
